# Touhou1

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  README.md  README_zh-CN.md  THIRD-PARTY-LICENSES.md
assets/json/: game.json
assets/json/config/: bullet.json
assets/json/stage/: stage1.json
assets/shaders/: default.fs
cmake/: CompilerConfig.cmake
include/: pch.hpp  stdafx.hpp
include/core/: App.hpp  ConfigManager.hpp  Context.hpp  Init.hpp  InputManager.hpp  InputSystem.hpp  Window.hpp
include/ecs/: BulletSystem.hpp  EntityManager.hpp  PlayerSystem.hpp
include/ecs/bullet/: HomingBulletSystem.hpp
include/ecs/comp/: BulletComp.hpp  DragComp.hpp  PlayerComp.hpp  RenderComp.hpp
include/ecs/component/: EnemyComponent.hpp  PlayerComponent.hpp  RenderComponent.hpp  SpriteComponent.hpp
include/ecs/system/: BulletInstructionPlayerSys.hpp  BulletLoader.hpp  BulletSystem.hpp  CollisionSystem.hpp  EnemySys.hpp  EnemySystem.hpp  HomingBulletSystem.hpp  PlayerSystem.hpp
include/ecs/system_old/: CollisionSystem.hpp
include/entity/: BulletSystem.hpp  CollisionSystem.hpp  EntityManager.hpp  PlayerSystem.hpp
include/entity/bullet/: HomingBulletSystem.hpp
include/entity/component/: BulletComponent.hpp  PlayerComponent.hpp  RenderComponent.hpp  SpriteComponent.hpp
include/game/cmd/: CmdPlayer.hpp  CmdVariant.hpp
include/game/cmd/impl/: SinBullet.hpp
include/game/comp/: BulletComp.hpp  CollisionComp.hpp  EnemyComp.hpp  PlayerComp.hpp  SpriteComp.hpp  TagComp.hpp  TransformComp.hpp
include/game/system/: BulletSystem.hpp  EnemySys.hpp  PlayerSystem.hpp  SpriteMovementSys.hpp
include/graphics/: MeshManager.hpp  RenderSystem.hpp  Shader.hpp  ShaderManager.hpp  TextureManager.hpp
include/resources/: AudioManager.hpp  ResourceManager.hpp
include/utils/: FileManager.hpp  JsonManager.hpp  Logger.hpp  Random.hpp  Time.hpp
module/: CMakeLists.txt
module/core/: App.ixx  InputSystem.ixx  Window.ixx  test.ixx
module/game/cmd/: CmdPlayer.ixx
module/game/comp/: BulletComp.ixx  CollisionComp.ixx  DragComp.ixx  PlayerComp.ixx  RenderComp.ixx  SpriteComp.ixx  TagComp.ixx  TransformComp.ixx
module/game/system/: BulletSys.ixx
module/graphics/: RenderSystem.ixx  Shader.ixx
module/utils/: Config.ixx
resources/json/config/: bullet.json
resources/json/stage/: stage1.json
src/: CMakeLists.txt  main.cpp  readme.txt
src/core/: App.cpp  App.cppm  AppLogicSys.cppm  ConfigManager.cpp  Context.cpp  Init.cpp  Init.cppm  InputManager.cpp  InputSystem.cpp  InputSystem.cppm  Window.cpp  Window.cppm
src/defs/: Config.cppm  Error.cppm  Events.cppm  Input.cppm  Macro.hpp  Type.cppm  defs.cppm
src/ecs/: BulletSystem.cpp  CollisionSystem.cpp  EntityManager.cpp  PlayerSystem.cpp
src/ecs/bullet/: HomingBulletSystem.cpp
src/ecs/system/: BulletInstructionPlayerSys.cpp  BulletLoader.cpp  BulletSystem.cpp  CollisionSystem.cpp  EnemySys.cpp  EnemySystem.cpp  HomingBulletSystem.cpp  PlayerSystem.cpp  SpriteMovementSys.cpp
src/ecs/systemold/: BulletLoader.cpp  BulletSystem.cpp  CollisionSystem.cpp  HomingBulletSystem.cpp  PlayerSystem.cpp
src/entity/: BulletSystem.cpp  CollisionSystem.cpp  EntityManager.cpp  PlayerSystem.cpp
src/entity/bullet/: HomingBulletSystem.cpp
src/game/cmd/: CmdPlayer.cpp  CmdPlayer.cppm  game.cmd.cppm
src/game/cmd/impl/: SinBullet.cpp  SinBullet.cppm  game.cmd.impl.cppm
src/game/comp/: SpriteComp.cppm  Tag.cppm  game.comp.cppm
src/game/system/: BulletSys.cpp  BulletSystem.cpp  CollisionSys.cpp  CollisionSystem.cpp  EnemySys.cpp  PlayerSys.cpp  PlayerSystem.cpp  SpriteMovementSys.cpp
src/graphics/: MeshManager.cpp  RenderSystem.cpp  Shader.cpp  ShaderManager.cpp  TextureManager.cpp  graphics.cppm
src/graphics/vk/: CommandBuffer.cppm  Common.cppm  Core.cppm  Device.cppm  Pipeline.cppm  Renderer.cppm  Surface.cppm  Swapchain.cppm  SyncObject.cppm  VKContext.cppm  VKPipeline.cppm  common.cppm  defs.cppm  utils.cppm  vk.cppm  vkCommandBuffer.cppm  vkContext.cppm  vkRender.cppm  vkSurface.cppm  vkcore.cppm  vkpipeline.cppm
src/resources/: AudioManager.cpp  AudioManager.cppm  ResourcesManager.cpp
src/utils/: FileManager.cpp  FileUtils.cppm  JsonManager.cpp  Logger.cpp  Math.cppm  Random.cpp  Random.cppm  Time.cpp  Time.cppm  utils.cppm
开发日记/: 20251107.txt
